mise en place de la section formations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul>
+        <li>Formation 1</li>
+        <li>Formations 2</li>
+    </ul>
 </body>
 </html>
